exports[`Pagination should disable all navigation when there is no items 1`] = `
<ul
  className="nav"
  role={null}>
  <li
    className="dropdown"
    style={undefined}>
    <a
      aria-expanded={false}
      aria-haspopup={true}
      className="dropdown-toggle"
      href=""
      id={42}
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button">
      5
       
      <span
        className="caret" />
    </a>
    <ul
      aria-labelledby={42}
      className="dropdown-menu"
      role="menu">
      <li
        className=""
        role="presentation"
        style={undefined}>
        <a
          href=""
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1">
          5
        </a>
      </li>
      <li
        className=""
        role="presentation"
        style={undefined}>
        <a
          href=""
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1">
          10
        </a>
      </li>
      <li
        className=""
        role="presentation"
        style={undefined}>
        <a
          href=""
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1">
          20
        </a>
      </li>
      <li
        className=""
        role="presentation"
        style={undefined}>
        <a
          href=""
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1">
          50
        </a>
      </li>
    </ul>
  </li>
  <li
    className="btn-link disabled"
    role="presentation"
    style={undefined}>
    <a
      href=""
      id={undefined}
      onClick={[Function]}
      role="button"
      style={
        Object {
          "pointerEvents": "none",
        }
      }
      tabIndex={-1}>
      <i
        aria-hidden="true"
        className="fa fa-backward"
        title={null} />
    </a>
  </li>
  <li
    className="btn-link tc-pagination-ctrl-prev disabled"
    role="presentation"
    style={undefined}>
    <a
      href=""
      id={undefined}
      onClick={[Function]}
      role="button"
      style={
        Object {
          "pointerEvents": "none",
        }
      }
      tabIndex={-1}>
      <i
        aria-hidden="true"
        className="fa fa-play"
        title={null} />
    </a>
  </li>
  <li
    className="disabled"
    role="presentation"
    style={undefined}>
    <a
      href=""
      onClick={[Function]}
      role="button"
      style={
        Object {
          "pointerEvents": "none",
        }
      }
      tabIndex={-1}>
      <span
        className="btn-link">
        1
        /
        0
      </span>
    </a>
  </li>
  <li
    className="btn-link disabled"
    role="presentation"
    style={undefined}>
    <a
      href=""
      id={undefined}
      onClick={[Function]}
      role="button"
      style={
        Object {
          "pointerEvents": "none",
        }
      }
      tabIndex={-1}>
      <i
        aria-hidden="true"
        className="fa fa-play"
        title={null} />
    </a>
  </li>
  <li
    className="btn-link disabled"
    role="presentation"
    style={undefined}>
    <a
      href=""
      id={undefined}
      onClick={[Function]}
      role="button"
      style={
        Object {
          "pointerEvents": "none",
        }
      }
      tabIndex={-1}>
      <i
        aria-hidden="true"
        className="fa fa-forward"
        title={null} />
    </a>
  </li>
</ul>
`;

exports[`Pagination should disable navigation when there is only one page 1`] = `
<ul
  className="nav"
  role={null}>
  <li
    className="dropdown"
    style={undefined}>
    <a
      aria-expanded={false}
      aria-haspopup={true}
      className="dropdown-toggle"
      href=""
      id={42}
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button">
      5
       
      <span
        className="caret" />
    </a>
    <ul
      aria-labelledby={42}
      className="dropdown-menu"
      role="menu">
      <li
        className=""
        role="presentation"
        style={undefined}>
        <a
          href=""
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1">
          5
        </a>
      </li>
      <li
        className=""
        role="presentation"
        style={undefined}>
        <a
          href=""
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1">
          10
        </a>
      </li>
      <li
        className=""
        role="presentation"
        style={undefined}>
        <a
          href=""
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1">
          20
        </a>
      </li>
      <li
        className=""
        role="presentation"
        style={undefined}>
        <a
          href=""
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1">
          50
        </a>
      </li>
    </ul>
  </li>
  <li
    className="btn-link disabled"
    role="presentation"
    style={undefined}>
    <a
      href=""
      id={undefined}
      onClick={[Function]}
      role="button"
      style={
        Object {
          "pointerEvents": "none",
        }
      }
      tabIndex={-1}>
      <i
        aria-hidden="true"
        className="fa fa-backward"
        title={null} />
    </a>
  </li>
  <li
    className="btn-link tc-pagination-ctrl-prev disabled"
    role="presentation"
    style={undefined}>
    <a
      href=""
      id={undefined}
      onClick={[Function]}
      role="button"
      style={
        Object {
          "pointerEvents": "none",
        }
      }
      tabIndex={-1}>
      <i
        aria-hidden="true"
        className="fa fa-play"
        title={null} />
    </a>
  </li>
  <li
    className="disabled"
    role="presentation"
    style={undefined}>
    <a
      href=""
      onClick={[Function]}
      role="button"
      style={
        Object {
          "pointerEvents": "none",
        }
      }
      tabIndex={-1}>
      <span
        className="btn-link">
        1
        /
        1
      </span>
    </a>
  </li>
  <li
    className="btn-link disabled"
    role="presentation"
    style={undefined}>
    <a
      href=""
      id={undefined}
      onClick={[Function]}
      role="button"
      style={
        Object {
          "pointerEvents": "none",
        }
      }
      tabIndex={-1}>
      <i
        aria-hidden="true"
        className="fa fa-play"
        title={null} />
    </a>
  </li>
  <li
    className="btn-link disabled"
    role="presentation"
    style={undefined}>
    <a
      href=""
      id={undefined}
      onClick={[Function]}
      role="button"
      style={
        Object {
          "pointerEvents": "none",
        }
      }
      tabIndex={-1}>
      <i
        aria-hidden="true"
        className="fa fa-forward"
        title={null} />
    </a>
  </li>
</ul>
`;

exports[`Pagination should not render navigation when show all items 1`] = `
<ul
  className="nav"
  role={null}>
  <li
    className="dropdown"
    style={undefined}>
    <a
      aria-expanded={false}
      aria-haspopup={true}
      className="dropdown-toggle"
      href=""
      id={42}
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button">
      All
       
      <span
        className="caret" />
    </a>
    <ul
      aria-labelledby={42}
      className="dropdown-menu"
      role="menu">
      <li
        className=""
        role="presentation"
        style={undefined}>
        <a
          href=""
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1">
          5
        </a>
      </li>
      <li
        className=""
        role="presentation"
        style={undefined}>
        <a
          href=""
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1">
          10
        </a>
      </li>
      <li
        className=""
        role="presentation"
        style={undefined}>
        <a
          href=""
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1">
          20
        </a>
      </li>
      <li
        className=""
        role="presentation"
        style={undefined}>
        <a
          href=""
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1">
          50
        </a>
      </li>
    </ul>
  </li>
</ul>
`;

exports[`Pagination should render 1`] = `
<ul
  className="nav"
  role={null}>
  <li
    className="dropdown"
    style={undefined}>
    <a
      aria-expanded={false}
      aria-haspopup={true}
      className="dropdown-toggle"
      href=""
      id={42}
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button">
      5
       
      <span
        className="caret" />
    </a>
    <ul
      aria-labelledby={42}
      className="dropdown-menu"
      role="menu">
      <li
        className=""
        role="presentation"
        style={undefined}>
        <a
          href=""
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1">
          5
        </a>
      </li>
      <li
        className=""
        role="presentation"
        style={undefined}>
        <a
          href=""
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1">
          10
        </a>
      </li>
      <li
        className=""
        role="presentation"
        style={undefined}>
        <a
          href=""
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1">
          20
        </a>
      </li>
      <li
        className=""
        role="presentation"
        style={undefined}>
        <a
          href=""
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1">
          50
        </a>
      </li>
    </ul>
  </li>
  <li
    className="btn-link"
    role="presentation"
    style={undefined}>
    <a
      href=""
      id={undefined}
      onClick={[Function]}
      role="button">
      <i
        aria-hidden="true"
        className="fa fa-backward"
        title={null} />
    </a>
  </li>
  <li
    className="btn-link tc-pagination-ctrl-prev"
    role="presentation"
    style={undefined}>
    <a
      href=""
      id={undefined}
      onClick={[Function]}
      role="button">
      <i
        aria-hidden="true"
        className="fa fa-play"
        title={null} />
    </a>
  </li>
  <li
    className="disabled"
    role="presentation"
    style={undefined}>
    <a
      href=""
      onClick={[Function]}
      role="button"
      style={
        Object {
          "pointerEvents": "none",
        }
      }
      tabIndex={-1}>
      <span
        className="btn-link">
        2
        /
        4
      </span>
    </a>
  </li>
  <li
    className="btn-link"
    role="presentation"
    style={undefined}>
    <a
      href=""
      id={undefined}
      onClick={[Function]}
      role="button">
      <i
        aria-hidden="true"
        className="fa fa-play"
        title={null} />
    </a>
  </li>
  <li
    className="btn-link"
    role="presentation"
    style={undefined}>
    <a
      href=""
      id={undefined}
      onClick={[Function]}
      role="button">
      <i
        aria-hidden="true"
        className="fa fa-forward"
        title={null} />
    </a>
  </li>
</ul>
`;

exports[`Pagination should render id if provided 1`] = `
<ul
  className="nav"
  role={null}>
  <li
    className="dropdown"
    style={undefined}>
    <a
      aria-expanded={false}
      aria-haspopup={true}
      className="dropdown-toggle"
      href=""
      id="toolbar-pagination-size"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button">
      5
       
      <span
        className="caret" />
    </a>
    <ul
      aria-labelledby="toolbar-pagination-size"
      className="dropdown-menu"
      role="menu">
      <li
        className=""
        role="presentation"
        style={undefined}>
        <a
          href=""
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1">
          5
        </a>
      </li>
      <li
        className=""
        role="presentation"
        style={undefined}>
        <a
          href=""
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1">
          10
        </a>
      </li>
      <li
        className=""
        role="presentation"
        style={undefined}>
        <a
          href=""
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1">
          20
        </a>
      </li>
      <li
        className=""
        role="presentation"
        style={undefined}>
        <a
          href=""
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1">
          50
        </a>
      </li>
    </ul>
  </li>
  <li
    className="btn-link"
    role="presentation"
    style={undefined}>
    <a
      href=""
      id="toolbar-pagination-nav-to-first"
      onClick={[Function]}
      role="button">
      <i
        aria-hidden="true"
        className="fa fa-backward"
        title={null} />
    </a>
  </li>
  <li
    className="btn-link tc-pagination-ctrl-prev"
    role="presentation"
    style={undefined}>
    <a
      href=""
      id="toolbar-pagination-nav-to-prev"
      onClick={[Function]}
      role="button">
      <i
        aria-hidden="true"
        className="fa fa-play"
        title={null} />
    </a>
  </li>
  <li
    className="disabled"
    role="presentation"
    style={undefined}>
    <a
      href=""
      onClick={[Function]}
      role="button"
      style={
        Object {
          "pointerEvents": "none",
        }
      }
      tabIndex={-1}>
      <span
        className="btn-link">
        2
        /
        4
      </span>
    </a>
  </li>
  <li
    className="btn-link"
    role="presentation"
    style={undefined}>
    <a
      href=""
      id="toolbar-pagination-nav-to-next"
      onClick={[Function]}
      role="button">
      <i
        aria-hidden="true"
        className="fa fa-play"
        title={null} />
    </a>
  </li>
  <li
    className="btn-link"
    role="presentation"
    style={undefined}>
    <a
      href=""
      id="toolbar-pagination-nav-to-last"
      onClick={[Function]}
      role="button">
      <i
        aria-hidden="true"
        className="fa fa-forward"
        title={null} />
    </a>
  </li>
</ul>
`;

exports[`Pagination should render menu item with "All" title when size is -1 1`] = `
<ul
  className="nav"
  role={null}>
  <li
    className="dropdown"
    style={undefined}>
    <a
      aria-expanded={false}
      aria-haspopup={true}
      className="dropdown-toggle"
      href=""
      id={42}
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button">
      All
       
      <span
        className="caret" />
    </a>
    <ul
      aria-labelledby={42}
      className="dropdown-menu"
      role="menu">
      <li
        className=""
        role="presentation"
        style={undefined}>
        <a
          href=""
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1">
          5
        </a>
      </li>
      <li
        className=""
        role="presentation"
        style={undefined}>
        <a
          href=""
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1">
          10
        </a>
      </li>
      <li
        className=""
        role="presentation"
        style={undefined}>
        <a
          href=""
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1">
          20
        </a>
      </li>
      <li
        className=""
        role="presentation"
        style={undefined}>
        <a
          href=""
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1">
          All
        </a>
      </li>
    </ul>
  </li>
</ul>
`;
